[package]
name = "folco-renderer"
version = "0.1.0"
edition = "2024"

[features]
default = []
twemoji = ["dep:twemoji-assets"]

[dependencies]
image = "0.25"
palette = "0.7"
resvg = "0.44"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
twemoji-assets = { version = "1.5", optional = true, default-features = false, features = ["svg"] }
