[package]
name = "folco-renderer"
version = "0.1.0"
edition = "2024"

[features]
default = []
twemoji = ["dep:twemoji-assets"]
jsonschema = ["dep:schemars"]

[dependencies]
image = "0.25"
palette = "0.7"
resvg = "0.44"
schemars = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
twemoji-assets = { version = "1.5", optional = true }
